--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -14,8 +14,7 @@
     height: 100px;
 }
 .nav {
-    position: absolute;
-    right: 50%;
+    position: center;
     padding: 20px;
     color: black;
     font: georgia;
