--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -14,7 +14,8 @@
     height: 100px;
 }
 .nav {
-    position: center;
+    position: absolute;
+    right: 175px;
     padding: 20px;
     color: black;
     font: georgia;
