--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -10,19 +10,19 @@
 }
 
 .logo {
-    width: 150px;
-    height: 150px;
+    width: 125px;
+    height: 125px;
     position: relative;
     left: 450px;
 }
 .nav {
     position: absolute;
-    right: 415px;
+    right: 350px;
     padding: 20px;
     color: black;
     font: georgia;
-    font-weight: 325;
-    font-size: x-large;
+    font-weight: 30;
+    font-size: xx-large;
 }
 .rafting {
     width: 740px;
