--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -20,6 +20,7 @@
     right: 350px;
     padding: 20px;
     color: black;
+    background-color: white;
     font: georgia;
     font-weight: 30;
     font-size: xx-large;
