--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -19,6 +19,28 @@
     background-color: #7CA5B8;
     
 }
+
+.callout3 {
+    display: flex;
+    align-items: center;
+	max-width: 1700px;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 1);
+    padding: 2rem;
+    background-color: #7CA5B8;
+    
+}
+
+.callout4 {
+    display: flex;
+    align-items: center;
+	max-width: 1700px;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 1);
+    padding: 2rem;
+    background-color: #7CA5B8;
+    
+}
 .logo {
     width: 125px;
     height: 125px;
