--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -112,6 +112,13 @@
     font-size: xx-large;
 
 }
+.wwr2{
+    position: absolute;
+    right: 550px;
+    font-size: xx-large;
+
+}
+
 .textmargin{
     margin-top: 95px;
     margin-right: 150px;
