--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -61,7 +61,7 @@
     width: 300px;
     height: 200px;
     position:relative;
-    right:100px;
+    left: 475px;
     bottom: 250px;
 }
 .stats {
