--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
 	max-width: 1700px;
+    max-height: 400px;
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 1);
     padding: 2rem;
