--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
 	max-width: 1700px;
+    max-height: 200px;
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 1);
     padding: 2rem;
@@ -25,6 +26,7 @@
     display: flex;
     align-items: center;
 	max-width: 1700px;
+    max-height: 200px;
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 1);
     padding: 2rem;
@@ -35,6 +37,7 @@
 .callout4 {
     display: flex;
     align-items: center;
+    max-height: 200px;
 	max-width: 1700px;
     margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 1);
