--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -110,6 +110,7 @@
     bottom: 20px;
     right: 25px;
     font-size: small;
+    background-color: white;
 }
 .wwr{
     position: absolute;
@@ -126,7 +127,7 @@
 }
 
 .textmargin{
-    margin-top: 250px;
+    margin-top: 350px;
     margin-right: 300px;
     background-color: white;
 }
