--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -130,6 +130,7 @@
 .textmargin{
     margin-top: 350px;
     margin-right: 300px;
+    background-color: white;
 }
 .textmargin2{
     margin-top: 95px;
