--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -66,7 +66,7 @@
     height: 200px;
     position:relative;
     left: 1125px;
-    bottom: 175px;
+    bottom: 190px;
 }
 .stats {
 	position:absolute;
@@ -122,11 +122,16 @@
 }
 .wwr2{
     position: absolute;
-    right: 650px;
+    right: 700px;
     font-size: xx-large;
 
 }
+.wwr3{
+    position: absolute;
+    right: 675px;
+    font-size: xx-large;
 
+}
 .textmargin{
     margin-top: 350px;
     margin-right: 300px;
