--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -102,6 +102,8 @@
     bottom:0;
     left:0;
     font-size: medium;
+    height: 25px;
+    width: 25px;
 
 }
 
@@ -128,7 +130,7 @@
 }
 .wwr3{
     position: absolute;
-    right: 665px;
+    right: 660px;
     font-size: xx-large;
 
 }
