--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -99,12 +99,10 @@
 
 .footer {
     position:fixed;
-    bottom:0;
-    left:0;
+    bottom:100px;
+    left:100px;
     font-size: medium;
-    height: 25px;
-    width: 25px;
-
+    
 }
 
 .social{
@@ -143,3 +141,7 @@
     margin-top: 95px;
 }
 
+.size{
+    height: 50px;
+    width: 50px;
+}
