--- a/wwr/stylewwr/wwr.css
+++ b/wwr/stylewwr/wwr.css
@@ -100,9 +100,8 @@
 .footer {
     position:fixed;
     bottom:100px;
-    left:100px;
-    font-size: medium;
-    
+    left:0px;
+    bottom:0px;
 }
 
 .social{
@@ -142,6 +141,6 @@
 }
 
 .size{
-    height: 50px;
-    width: 50px;
+    height: 25px;
+    width: 25px;
 }
