--- a/wwr/stylewwr/rafting.css
+++ b/wwr/stylewwr/rafting.css
@@ -55,11 +55,13 @@
     position: absolute;
     right: 350px;
     padding: 20px;
+    text-decoration: none;
     color: black;
     background-color: white;
     font: georgia;
     font-weight: 30;
     font-size: xx-large;
+    
 }
 .family {
     width: 300px;
@@ -143,4 +145,9 @@
 .size{
     height: 25px;
     width: 25px;
+}
+
+.rafting{
+    height: 80px;
+    width: 80px;
 }
