--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -36,11 +36,11 @@
     align-items: center;
 	max-width: 1700px;
     max-height: 150px;
-    margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 1);
     padding: 2rem;
     background-color: var(--primary-color);
     font-family: 'Roboto Slab', serif;
+    text-align: top;
     
 }
 
@@ -114,6 +114,7 @@
 .wwr2{
     position: absolute;
     right: 700px;
+    top: 440px;
     font-size: xx-large;
 
 }
