--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -19,16 +19,16 @@
 }
 
 .hero {
-    display: flex;
-    align-items: center;
-	max-width: 1700px;
-    max-height: 150px;
+    position: relative;
+    background-size: cover; 
+    background-position: center; 
     margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 1);
     padding: 2rem;
     background-image: url(../wwrimages/hero.jpg);
+    height: min-content;
     font-family: 'Roboto Slab', serif;
-    
+    text-decoration: none;
+    font-size: small;
 }
 
 .callout3 {
@@ -76,7 +76,6 @@
 }
 .family {
     float: right;
-    position:relative;
     bottom: 50px;
     height: 100px;
 
@@ -105,7 +104,8 @@
 }
 .wwr{
     position: absolute;
-    right: 600px;
+    right: 525px;
+    top: 200px;
     font-size: xx-large;
     background-color: white;
     font-family: 'Lora', serif;
@@ -121,14 +121,17 @@
 .wwr3{
     position: absolute;
     right: 660px;
+    top: 600px;
     font-size: xx-large;
 
 }
 .textmargin{
-    margin-top: 200px;
+    position:absolute;
+    margin-top: 20px;
     margin-right: 300px;
     background-color: white;
     font-family: 'Lora', serif;
+    
 }
 .textmargin2{
     margin-top: 75px;
