--- a/wwr/styles/oneflex.css
+++ b/wwr/styles/oneflex.css
@@ -1,30 +1,25 @@
-.grid-container {
-	display: flex;
-	grid-template-columns: 120px 1fr 2fr 1fr;
-	align-items: center;
-	background-color: #2196F3;
-	padding: 10px;
-	row-gap: 50px;
-	justify-content: center;
-  }
+:root {
+    --primary-color: #7CA5B8; 
+    --secondary-color: #020887; 
+    --accent-color: #A9DBB8; 
+}
   .grid-container2 {
 	display: grid;
 	grid-template-columns: auto auto auto;
 	background-color: #2196F3;
 	padding: 10px;
-	
   }
 .logo{
-	grid-template-columns: 1fr;
-	justify-content: flex-start;
+	display: grid;
+	justify-content: center;
 	height:50px;
-	align-items: center;
 }
 .two {
 	background-color: #ace;
 	text-align: center;
 	align-items: center;
 	justify-content: center;
+	font-family: 'Roboto Slab', serif;
 }
 .container2 {
  	display: flex;
@@ -38,6 +33,7 @@
    justify-content: center;
    background-color: #ace;
    border: 1px black;
+   font-family: 'Roboto Slab', serif;
 }
 .container4 {
 	display: flex;
@@ -45,13 +41,15 @@
    justify-content: center;
    background-color: #ace;
    border: 1px black;
+   font-family: 'Roboto Slab', serif;
 }
 
 .grid-item {
 	background-color: rgba(255, 255, 255, 0.8);
 	border: 1px solid rgba(0, 0, 0, 0.8);
 	padding: 5px;
-	align-items: center;
+	display: grid;
+	flex-wrap: wrap; 
 }
 
 .family{
@@ -69,6 +67,7 @@
 	grid-template-columns: 1fr 1fr;
 	background-color: #ace;
 	grid-template-columns: auto auto auto;
+	font-family: 'Lora', serif;
 
 }
 .historytext{
@@ -76,15 +75,29 @@
 	background-color: #ace;
 	font-size: small;
 	grid-template-columns: 4fr 1fr 4fr;
+	font-family: 'Lora', serif;
 }
 
 .footer{
 	font-size: small;
-	text-align: center;
+	text-align: right;
+	font-family: 'Lora', serif;
 }
 .size{
 	height: 25px;
 }
 .nav{
 	text-decoration: none;
+	display: flex;
+    grid-template-columns: 1fr  1fr 1fr 1fr;
+    gap: 10px; 
+	justify-content: center;
+	align-items: center;
+	background-color: #2196F3;
+	padding: 5px;
+	font-family: 'Roboto Slab', serif;
+}
+.fig{
+	font-family: 'Lora', serif;
+	font-size: x-small;
 }
