--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -3,146 +3,101 @@
     --secondary-color: #020887; 
     --accent-color: #A9DBB8; 
 }
-
-
-
-.callout {
-    display: flex;
-    align-items: center;
-	max-width: 1700px;
-    max-height: 150px;
-    margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 1);
-    padding: 2rem;
-    background-color: var(--secondary-color);
-    
+  .grid-container2 {
+	display: grid;
+	grid-template-columns: auto auto auto;
+	background-color: #2196F3;
+	padding: 10px;
+  }
+.logo{
+	display: grid;
+	justify-content: center;
+	height:50px;
+}
+.two {
+	background-color: #ace;
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	font-family: 'Roboto Slab', serif;
+}
+.container2 {
+ 	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	background-color: #ace;
+}
+.container3 {
+	display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   background-color: #ace;
+   border: 1px black;
+   font-family: 'Roboto Slab', serif;
+}
+.container4 {
+	display: flex;
+   flex-wrap: wrap;
+   justify-content: center;
+   background-color: #ace;
+   border: 1px black;
+   font-family: 'Roboto Slab', serif;
 }
 
-.hero {
-    position: relative;
-    background-size: cover; 
-    background-position: center; 
-    margin: 1rem;
-    padding: 2rem;
-    background-image: url(../wwrimages/hero.jpg);
-    height: min-content;
-    font-family: 'Roboto Slab', serif;
-    text-decoration: none;
-    font-size: small;
+.grid-item {
+	background-color: rgba(255, 255, 255, 0.8);
+	border: 1px solid rgba(0, 0, 0, 0.8);
+	padding: 5px;
+	display: grid;
+	flex-wrap: wrap; 
 }
 
-.callout3 {
-    display: flex;
-    align-items: center;
-	max-width: 1700px;
-    max-height: 150px;
-    border: 1px solid rgba(0, 0, 0, 1);
-    padding: 2rem;
-    background-color: var(--primary-color);
-    font-family: 'Roboto Slab', serif;
+.family{
+	height: 100px;
+	flex-wrap: wrap;
 }
-
-.callout4 {
-    display: flex;
-    align-items: center;
-    max-height: 150px;
-	max-width: 1700px;
-    margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 1);
-    padding: 2rem;
-    background-color: var(--primary-color);
-    font-family: 'Roboto Slab', serif;
-    
+.hero{
+	height: 125px;
 }
-.logo {
-    width: 125px;
-    height: 125px;
-    position: relative;
-    left: 400px;
-}
-.nav {
-    position: absolute;
-    right: 350px;
-    padding: 20px;
-    text-decoration: none;
-    color: black;
-    background-color: white;
-    font-weight: 30;
-    font-size: xx-large;
-    font-family: 'Lora', serif;
-    
-}
-.family {
-    float: right;
-    bottom: 50px;
-    height: 100px;
-
-}
-.footerlogo {
-    height: 50px;
-    width: auto;
-    right: 0;
-    bottom:0;
-    text-decoration: none;
-}
-.footer {
-    bottom:100px;
-    left:0px;
-    bottom:0px;
-    font-family: 'Lora', serif;
-    text-decoration: none;
-}
-
-.social{
-    position: absolute;
-    bottom: 20px;
-    right: 25px;
-    font-size: small;
-    background-color: white;
-}
-.wwr{
-    position: absolute;
-    right: 525px;
-    top: 200px;
-    font-size: xx-large;
-    background-color: white;
-    font-family: 'Lora', serif;
-
-}
-.wwr2{
-    position: absolute;
-    right: 700px;
-    top: 440px;
-    font-size: xx-large;
-
-}
-.wwr3{
-    position: absolute;
-    right: 660px;
-    top: 600px;
-    font-size: xx-large;
-
-}
-.textmargin{
-    position:absolute;
-    margin-top: 20px;
-    margin-right: 300px;
-    background-color: white;
-    font-family: 'Lora', serif;
-    
-}
-.textmargin2{
-    margin-top: 75px;
-    font-family: 'Lora', serif;
-}
-
-.size{
-    height: 25px;
-    width: 25px;
-    text-decoration: none;
-}
-
 .rafting{
-    height: 80px;
-    width: 80px;
+	height: 100px;
+}
+.wwrtext{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	background-color: #ace;
+	grid-template-columns: auto auto auto;
+	font-family: 'Lora', serif;
+
+}
+.historytext{
+	display: grid;
+	background-color: #ace;
+	font-size: small;
+	grid-template-columns: 4fr 1fr 4fr;
+	font-family: 'Lora', serif;
+}
+
+.footer{
+	font-size: small;
+	text-align: right;
+	font-family: 'Lora', serif;
+}
+.size{
+	height: 25px;
+}
+.nav{
+	text-decoration: none;
+	display: flex;
+    grid-template-columns: 1fr  1fr 1fr 1fr;
+    gap: 10px; 
+	justify-content: center;
+	align-items: center;
+	background-color: #2196F3;
+	padding: 5px;
+	font-family: 'Roboto Slab', serif;
+}
+.fig{
+	font-family: 'Lora', serif;
+	font-size: x-small;
 }
