--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -17,20 +17,6 @@
     height: 50px;
 }
 
-.heroheading {
-    background-color: #ace;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Roboto Slab', serif;
-}
-.hero {
-	position: relative;
-	display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   background-color: #ace;
-}
 .container3 {
    display: flex;
   flex-wrap: wrap;
@@ -55,25 +41,9 @@
     display: grid;
 }
 
-.family {
-    height: 100px;
-}
-
-.heroimg {
-    height: 125px;
-	float: right;
-}
-
 .rafting {
     height: 100px;
 	text-decoration: none;
-}
-
-.wwrtext {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    background-color: #ace;
-    font-family: 'Lora', serif;
 }
 
 .historytext {
@@ -101,7 +71,7 @@
     gap: 10px; 
     justify-content: center;
     align-items: center;
-    background-color: #2196F3;
+    background-color: #ace;
     padding: 5px;
     font-family: 'Roboto Slab', serif;
 }
@@ -109,4 +79,37 @@
 .fig {
     font-family: 'Lora', serif;
     font-size: x-small;
+}
+.hero {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    width: 100%;
+    height: 350px;
+    text-align: center; 
+    background-color: #ace;
+    margin: 10px;
+    font-family: 'Lora', serif;
+}
+
+.heroheading h1 {
+    position: relative;
+    font-size: 3em; 
+    background-color: #ace;
+}
+
+.wwrtext {
+    position: relative;
+    max-width: 500px; 
+    background-color: #ace;
+    font-family: 'Lora', serif;
+}
+
+
+
+.family {
+    float: right; 
+    max-width: 150px;
 }
