--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -13,8 +13,8 @@
 
 .logo {
     display: grid;
-    justify-content: center;
-    height: 50px;
+    padding: 10px;
+    height: 100px;
 }
 
 .container3 {
@@ -35,10 +35,12 @@
 }
 
 .grid-item {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    justify-content: center;
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 5px;
-    display: grid;
 }
 
 .rafting {
@@ -65,16 +67,16 @@
 }
 
 .nav {
-    text-decoration: none;
-    display: flex;
-    grid-template-columns: repeat(4, 1fr); 
-    gap: 10px; 
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr auto auto auto auto auto;
+    align-items: center; 
+    justify-content: right;
+    gap: 5px; 
     background-color: #ace;
     padding: 5px;
     font-family: 'Roboto Slab', serif;
 }
+
 
 .fig {
     font-family: 'Lora', serif;
@@ -113,6 +115,7 @@ height: 200px;
 .family {
     float: right; 
     max-width: 150px;
+    align-items: center;
 }
 .containerlocation {
     text-decoration: none;
