--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -59,7 +59,7 @@
 
 .footer {
     display: grid;
-    grid-template-columns: 1 fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     font-size: small;
     text-align: right;
     font-family: 'Lora', serif;
@@ -107,7 +107,6 @@
 
 .wwrtext {
     position: relative;
-    max-width: auto; 
     background-color: #ace;
     font-family: 'Lora', serif;
 }
@@ -182,11 +181,10 @@ height: 200px;
 .contactfooter{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 5px;
+    grid-column-gap: 5px;
     align-items: center;
     font-size: small;
     text-align: right;
     font-family: 'Lora', serif;
     font-weight: bold;
-    
 }
