--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -197,22 +197,142 @@ height: 200px;
     width: 100%;
     height: 500px;
 }
-.link{
-    background: url("https://noc.com/wp-content/uploads/2022/06/IMG_0023-1680x1120.jpg");
-    height: 700px;
+.backgroundlink{
+    background: url("https://cdn.pixabay.com/photo/2017/06/14/18/05/river-2402897_1280.jpg");
+    height: 750px;
 }
 .headertext{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-column-gap: 5px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     font-size: large;
-    text-align: right;
     font-family: 'Lora', serif;
     font-weight: bold;
+    padding: 5px;
+    
+    text-decoration: none;
+    
 }
+
 .logo2 {
     display: grid;
     justify-content: center;
     padding: 10px;
     height: 100px;
 }
+.h1homemessage{
+    display: flex;
+    justify-content: center;
+    background-color: var(--primary-color)
+}
+.grid-itemHP {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    background-color: var(--primary-color);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    align-items: center;
+    justify-content: center;
+}
+
+.bodyHP{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    gap: 10px;
+}
+
+.customerpics{
+    height: 200px;
+    width: auto;
+    align-self: center;
+}
+.customertest{
+    background-color: var(--primary-color);
+}
+.clickhere{
+    display: flex;
+    justify-content: center;
+    background-color: var(--primary-color);
+    font-size: large;
+}
+.raftingpics{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+}
+.raftingsize{
+    display: grid;
+    height: 200px;
+    width: auto;
+    justify-content: center;
+}
+.raftingfamily{
+    width: 100%;
+    height: 500px;
+}
+.HPfooter{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    font-size: small;
+    text-align: right;
+    font-family: 'Lora', serif;
+    background-color: var(--primary-color);
+}
+/* FOURM CSS */
+form {
+    width: 650px;
+    margin: 0 auto;
+    padding: 1rem;
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-radius: 0.5rem;
+    background-color: #eee;
+    display: grid;
+}
+fieldset {
+    display: grid;
+    grid-gap: .5rem;
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, .2);
+    padding: 1rem;
+}
+legend{
+    padding: 0.5rem;
+    color: navy;
+    font-size: 1.3em;
+}
+label {
+    text-align: right;
+    padding-right: 1rem;
+}
+input, select, textarea{
+    padding: 0.5rem;
+    font-size: 1.1rem;
+}
+input[type="checkbox"] {
+    width: 22px;
+    height: 22px;
+    vertical-align: bottom;
+}
+button {
+    margin: 1rem;
+    background-color: navy;
+    color: #fff;
+    border: none;
+    border-radius: .5rem;
+    padding: .75rem;
+    font-size: 1.2rem;
+}
+button:hover{
+    background-color: darkgreen;
+}
+
+form-item{
+    display: grid;
+    align-items: center;
+}
+column1 {
+    grid-template-columns: 3fr 1fr;
+    margin: 0.5rem 0;
+}
+column2 {
+    grid-template-columns: 1fr 2fr;
+}
+/* END FOURM CSS */
