--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -276,6 +276,17 @@ height: 200px;
     font-family: 'Lora', serif;
     background-color: var(--primary-color);
 }
+.trips{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    border: 10px solid black;
+    background-color: var(--primary-color);
+}
+.positiontable{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+.tripsdescription
 /* FOURM CSS */
 form {
     width: 650px;
@@ -336,3 +347,45 @@ column2 {
     grid-template-columns: 1fr 2fr;
 }
 /* END FOURM CSS */
+/* TABLE CSS */
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(140 140 140);
+    font-family: sans-serif;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+  }
+  
+  caption {
+    caption-side: bottom;
+    padding: 10px;
+    font-weight: bold;
+  }
+  
+  thead,
+  tfoot {
+    background-color: rgb(228 240 245);
+  }
+  
+  th,
+  td {
+    border: 1px solid rgb(160 160 160);
+    padding: 8px 10px;
+  }
+  
+  td:last-of-type {
+    text-align: center;
+  }
+  
+  tbody > tr:nth-of-type(even) {
+    background-color: rgb(237 238 242);
+  }
+  
+  tfoot th {
+    text-align: right;
+  }
+  
+  tfoot td {
+    font-weight: bold;
+  }
+  /* END TABLE CSS */
