--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -288,6 +288,7 @@ height: 200px;
 }
 .tripsdescription{
     background-color: var(--primary-color);
+    font-family: 'Roboto Slab', serif;
 }
 /* FOURM CSS */
 form {
@@ -356,12 +357,14 @@ table {
     font-family: sans-serif;
     font-size: 0.8rem;
     letter-spacing: 1px;
+    font-family: 'Roboto Slab', serif;
   }
   
   caption {
     caption-side: bottom;
     padding: 10px;
     font-weight: bold;
+    font-family: 'Roboto Slab', serif;
   }
   
   thead,
